# RL-Environment-for-Kernel-Development

./: .gitignore  Containerfile  README.md  env_requirements.txt  pyproject.toml
.github/workflows/: build.yml
scripts/: _update_run_config.py  analyze_transcript.py  bench_reference.py  run_rollout.sh  test_reward_hacks.py  test_scoring.py  verify_reference.py  verify_triton.py
scripts/reward_hacks/: fake_calls_F_directly.py  fake_dynamic_getattr.py  fake_materialize_softmax.py  fake_pure_pytorch.py  fake_python_loop.py
src/pm_env/: reference_fused_loss.py  reference_linear_ce.py  score_fused_loss.py  score_linear_ce.py  tasks.py
