[project]
name = "pm_env"
version = "0.1.0"
description = "Let an LLM execute tasks in an environment."
classifiers = ["Private :: Do not Upload"]
requires-python = ">=3.12"
dependencies = [
    "fastmcp==2.13.3",
    "litellm>=1.80.12",
    "pydantic",
    "psutil>=7.2.1",
    "typer>=0.19.0",
    "rich",
    # For compatibility with huggingface's `datasets` package.
    "fsspec<=2025.10.0",
    "websockets>=14.0",
    "loguru>=0.7.3",
    "pymongo>=4.14.1",
    "textual>=6.2.1",
    "anthropic>=0.75.0",
    "torch ; sys_platform == 'linux'",
    "triton ; sys_platform == 'linux'",
    "numpy",
]

[project.scripts]
pm_env = "pm_env.entrypoints:app"

[build-system]
requires = ["uv_build>=0.6.5"]
build-backend = "uv_build"

# Pin torch to the CUDA 12.8 wheel so the image works on any driver
# 555+ (RTX 4090/5090, L4, A100, H100). The default PyPI wheel ships
# CUDA 13 runtime, which requires driver 580+. Triton and numpy come
# from the default PyPI index.
[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "UP",
]